Fixed bug that would not center Company name on small screens.

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ body {
   background-attachment: fixed;
 }
 
+a:hover { 
+  color: white;
+}
+
 html {
   position: relative;
   min-height: 100%;
